--- a/_posts/2025-06-10-001-Closed-Test-25.7-Submarine-Reprocessing.md
+++ b/_posts/2025-06-10-001-Closed-Test-25.7-Submarine-Reprocessing.md
@@ -1,3 +1,9 @@
+---
+title: "Closed Test - Submarine Rework"
+date: 2025-06-10
+permalink: /20250610-001/
+---
+
 # CLOSED TEST 25.7 - SUBMARINE REWORK
 
 Version 25.7 will change the gameplay of submarines - find out more!
