:wrench: Show the original post link.

--- a/_posts/2025-06-10-001-Closed-Test-25.7-Submarine-Reprocessing.md
+++ b/_posts/2025-06-10-001-Closed-Test-25.7-Submarine-Reprocessing.md
@@ -4,6 +4,8 @@ date: 2025-06-10
 permalink: /20250610-001/
 ---
 
+[Original Post](https://blog.korabli.su/blog/616)
+
 # CLOSED TEST 25.7 - SUBMARINE REWORK
 
 Version 25.7 will change the gameplay of submarines - find out more!
